# gh-mix

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  gh-mix  gh-sasaya  gh-sasaya-rust.sh  install.sh
.github/workflows/: release.yml
c/: CMakeLists.txt
c/gh-mix-c/: CMakeLists.txt
c/hello_c/: CMakeLists.txt
c/hello_c/src/: hello.c
c/hello_cpp/: CMakeLists.txt
c/hello_cpp/src/: hello.c
cpp/: CMakeLists.txt
cpp/gh-mix-cpp/: CMakeLists.txt
cpp/gh-mix-cpp/src/: hello.cpp
cpp/hello/: CMakeLists.txt
cpp/hello_cpp/: CMakeLists.txt
gh-mix/: CMakeLists.txt  gh-mix
gh-mix-c/: CMakeLists.txt
gh-mix-c/src/: hello.c
gh-mix-ctx1/: CMakeLists.txt
gh-mix-ctx1/src/: hello.c
gh-mix-ctx2/: CMakeLists.txt  Cargo.toml
gh-mix-ctx2/src/: hello.rs
gh-mix-ctx3/: CMakeLists.txt
gh-mix-ctx3/src/: gh-mix-ctx3
gh-mix-ctx4/: CMakeLists.txt  go.mod
gh-mix-rust/: CMakeLists.txt
gh-mix-rust/src/: hello.rs
gh-mix-sh/: CMakeLists.txt
gh-mix-sh/src/: gh-mix-ctx3
rust/: CMakeLists.txt
rust/gh-mix-rust/: CMakeLists.txt  Cargo.toml
rust/gh-mix-rust/src/: hello.rs
rust/hello_rust/: CMakeLists.txt  Cargo.toml
script/: build.sh
src/: main.rs
